bluetooth command code added

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-panic-halt = "0.2.0"
+heapless = "0.8.0"
 cortex-m = "0.7.7"
+panic-halt = "0.2.0"
 cortex-m-rt = "0.7.3"
 rp2040-boot2 = "0.3.0"
 rp2040-pac = { version = "0.6.0", features = ["rt"] }
