--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 heapless = "0.8.0"
 cortex-m = "0.7.7"
+micromath = "1.1.1"
 panic-halt = "0.2.0"
 cortex-m-rt = "0.7.3"
 rp2040-boot2 = "0.3.0"
